# puzzle-fact-check

./: .gitignore  AUTHORS  LICENSE  README.md  README_CN.md  main.py  pyproject.toml
agents/: __init__.py  base.py
agents/main/: __init__.py  callback.py  graph.py  prompts.py  states.py  test.py
agents/metadata_extractor/: __init__.py  callback.py  graph.py  prompts.py  states.py  test.py
agents/planner/: __init__.py  callback.py  graph.py  states.py  test.py
agents/searcher/: callback.py  graph.py  prompts.py  states.py  test.py
core/: engine.py
db/: README.md  __init__.py  integrations.py  repository.py  schema.py  services.py
examples/: example_react_agent.py  qwq.py
models/: __init__.py  base.py  main_reasoner.py  qwen_model.py
models/experts/: __init__.py  knowledge_extractor.py  metadata_extractor.py
models/main_reasoner/: __init__.py  model.py  prompts.py  test.py
models/prompts/: __init__.py  common_prompts.py  knowledge_extractor.py  (+2 more)
puzzle/: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  gunicorn.conf.py  main.py  pyproject.toml  run_api.py  server.py
puzzle/agents/: README.md  base.py
puzzle/agents/main/: callback.py  events.py  graph.py  prompts.py  states.py  test.py
puzzle/agents/metadata_extractor/: callback.py  events.py  example_callback.py  graph.py  prompts.py  states.py  test.py
puzzle/agents/searcher/: __init__.py  callback.py  events.py  graph.py  prompts.py  states.py  test.py
puzzle/api/: __init__.py  agent_service.py  app.py  events.py  model.py  models.py  service.py  sse.py
puzzle/config/: __init__.py  model_configs.py
puzzle/db/: __init__.py  integrations.py  repository.py  schema.py  services.py
puzzle/examples/: llm_streaming.py  multiple_agents.py
puzzle/frontend/: index.html
puzzle/knowledge/: retrieve.py  source.py
puzzle/models/: __init__.py  gemini.py  qwen.py
puzzle/tests/: graph_exec_test.py  neo4j.py  test_agent.py  test_astream.py  test_service.py
puzzle/tools/: __init__.py
puzzle/tools/get_current_time/: test.py  tool.py
puzzle/tools/read_pdf/: __init__.py  test.py  tool.py
puzzle/tools/read_webpage/: test.py  tool.py
puzzle/tools/search_baidu/: __init__.py  test.py  tool.py
puzzle/tools/search_bing/: __init__.py  tool.py
puzzle/tools/search_google/: test.py  tool.py
puzzle/tools/search_google_alternative/: __init__.py  test.py  tool.py
puzzle/tools/search_google_official/: __init__.py  test.py  tool.py
puzzle/tools/search_wikipedia/: test.py  tool.py
puzzle/utils/: __init__.py  exceptions.py  get_env.py  llm_callbacks.py  print_streaming_message.py  safe_parse.py  singleton.py  timer.py  view_graph.py
scripts/: db_migration.py
tests/: knowledge_extractor_test.py  main_reasoner_test.py  metadata_extractor_test.py  neo4j.py  test_neo4j.py  test_tool_schema.py
tools/: __init__.py
utils/: __init__.py  check_env.py  count_tokens.py  llm_callbacks.py  view_graph.py
web/: .env.production  package.json  pnpm-lock.yaml
(+58 files in other folders)
