[project]
name = "puzzle-fact-check"
version = "0.1.0"
description = ""
authors = [
    {name = "puggo",email = "puggoo1145@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.2.74,<0.3.0)",
    "browser-use (>=0.1.40,<0.2.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain (>=0.3.19,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
