[project]
name = "puzzle-fact-check"
version = "0.1.0"
description = "A self-reflective news fact check AI agent"
authors = [
    {name = "puggo",email = "puggoo1145@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.2.74,<0.3.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "langchain-deepseek (>=0.1.2,<0.2.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "googlesearch-python (>=1.3.0,<2.0.0)",
    "html2text (>=2024.2.26,<2025.0.0)",
    "playwright (>=1.50.0,<2.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "readchar (>=4.2.1,<5.0.0)",
    "ipython (>=9.0.1,<10.0.0)",
    "neomodel (>=5.4.4,<6.0.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "pypubsub (>=4.0.3,<5.0.0)",
    "langchain-tavily (>=0.1.5,<0.2.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "browser-use (==0.1.0)",
    "flask (>=3.1.0,<4.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
